force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Is used to capture Error information throughout the org. Eg in Apex, Flows and other automation or logic.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Error Log Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>