force-app/main/default/objects/Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Holds the error message produced at runtime.</description>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>