force-app/main/default/objects/Error_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Holds the related record id context which triggered the error if viable.</description>
    <label>Related Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>