force-app/main/default/objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Holds the Apex stack trace if relevant.</description>
    <label>Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>